Fix background covering for mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    background-size: cover;
     font-family: 'Poppins';
 }
 
